# pib-backend

./: .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile.brickd  FlaskAPI.collection.json  README.md  docker-compose.device.yaml  docker-compose.yaml  fix_compose_display_audio.py  health-check-pib.sh  nginx.conf  package.xml  patch_blockly_expressions_clean.py  patch_fast_direct_display.py  patch_pib_expressions_display.py  pib-api.postman_collection.json  pib-api.yaml  pytest.ini  ros-audio.env  ros_and_cerebra_setup.sh  ros_voice_assistant_boot.service  ros_voice_assistant_boot.sh  setup-pib.sh  setup.cfg  setup.py  test-setup-pib.sh  update-pib.sh  update-servo-ids.py
.github/: pull_request_template.md  release-drafter.yml
.test-venv/: pyvenv.cfg
boot_scripts/: bricklet_uid_boot.service  manageTinkerForgeSettings.py  ros_camera_boot.service  ros_motor_control_node_boot.service  ros_motor_current_node_boot.service  ros_motor_current_node_boot.sh  ros_motors_boot.service  ros_motors_boot.sh  ros_program_boot.service  ros_proxy_program_boot.service  ros_proxy_program_boot.sh  ros_voice_assistant_boot.service  ros_voice_assistant_boot.sh
client/: setup.py
datatypes/: CMakeLists.txt  package.xml
dev-tools/: health-check-pib.sh
dev_tools/: create_gitmodule_file.sh  health-check-pib.sh  local_cerebra_remote_deploy.sh
digital_twin/: README.md  docker-compose.yml
flask/: Pipfile  app.py  pib_api_boot.service  run.py
installation_files/: check_github_branches.sh  check_input_arguments.sh  check_system_variables.sh  check_user_input.sh  create_gitmodule_file.sh  get_setup_files.sh  install_cerebra.sh  install_python_packages.sh  install_system_packages.sh  install_tinkerforge.sh  python_packages_installation.sh  setup_packages.sh  system_packages_installation.sh  system_variable_checks.sh
installation_scripts/: check_github_branches.sh  create_gitmodule_file.sh  (+9 more)
ros_packages/button_service/: CMakeLists.txt  README.md  package.xml  start_button_service.sh
ros_packages/button_service/button_service_node_pkg/: blockly_client.py  button_service_node.py
ros_packages/button_service/scripts/: button_service_node
ros_packages/button_service/srv/: ReadButton.srv  SetButtonColor.srv  SetButtonManualOverride.srv  WaitForButton.srv
ros_packages/datatypes/: CMakeLists.txt  README.md  package.xml
ros_packages/datatypes/action/: Chat.action  PlayAudioFromFile.action  PlayAudioFromSpeech.action  RecordAudio.action  RunProgram.action
ros_packages/datatypes/msg/: ButtonColor.msg  ChatMessage.msg  DisplayImage.msg  ImageFormat.msg  ImageId.msg  MotorSettings.msg  ProgramInput.msg  ProgramPrompt.msg  ProxyRunProgramFeedback.msg  ProxyRunProgramResult.msg  SolidStateRelayState.msg  VoiceAssistantChatIsListening.msg
ros_packages/datatypes/srv/: ApplyJointTrajectory.srv  ApplyPose.srv  CreateOrUpdateChatMessage.srv  DecryptToken.srv  EncryptToken.srv  GetCameraImage.srv  GetChatIsListening.srv  GetJointPosition.srv  GetMicConfiguration.srv  GetTokenExists.srv  GetVoiceAssistantState.srv  PlayAudioFromFile.srv  PlayAudioFromSpeech.srv  ProxyRunProgramStart.srv  ProxyRunProgramStop.srv  SendChatMessage.srv  SetButtonColor.srv  SetSolidStateRelay.srv  SetVoiceAssistantState.srv  TextToSpeechPush.srv  VisionPrompt.srv  VoiceAssistantState.srv
ros_packages/doa/: Dockerfile  package.xml  setup.cfg  setup.py
ros_packages/doa/doa/: doa_listener.py  doa_publisher.py
ros_packages/doa/launch/: launch.py
ros_packages/motors/: .gitignore  Dockerfile  README.md  package.xml  requirements.txt  setup.py
ros_packages/motors/boot_scripts/: bricklet_uid_boot.service  ros_motor_boot.service  ros_motor_boot.sh  ros_motor_control_node_boot.sh  ros_motor_current_node_boot.sh
ros_packages/motors/launch/: launch.py  launch.yaml
ros_packages/motors/motors/: motor_control.py  motor_current.py  relay_control.py  rgb_button_control.py
ros_packages/motors/pib_motors/: setup.py
ros_packages/motors/pib_motors/pib_motors/: bricklet.py  bricklet_pin.py  config.py  motor.py  startup_pose_executor.py  update_bricklet_uids.py
ros_packages/motors/pib_motors/pib_motors/STservo_sdk/: __init__.py  group_sync_read.py  group_sync_write.py  protocol_packet_handler.py  scscl.py  sts.py  stservo_def.py
ros_packages/motors/utils/: update_bricklet_uids.py
ros_packages/pibsim_webots/: .gitignore  Dockerfile  README.md  package.xml  setup.cfg  setup.py
ros_packages/pibsim_webots/demo/moveArms/: metadata.yaml  moveArms_0.db3
ros_packages/pibsim_webots/demo/moveFingers/: metadata.yaml
ros_packages/pibsim_webots/demo/moveHead/: metadata.yaml  moveHead_0.db3
ros_packages/pibsim_webots/launch/: pib_launch.py
ros_packages/pibsim_webots/pibsim_webots/: gestures.py  mcp_server.py  pib_driver.py  ros_bridge.py
ros_packages/pibsim_webots/protos/: PibSimple.proto  pib.proto
ros_packages/pibsim_webots/protos/meshes/: camera_link.stl  oak_d_lite_s1.stl  sticker_blue.stl  sticker_green.stl  sticker_purple.stl  sticker_red.stl  urdf_body_s3.stl  urdf_ellbow_lower.stl  urdf_ellbow_lower_marker.stl  urdf_ellbow_upper_s1.stl  urdf_finger_distal.stl  urdf_finger_distal_marked.stl  urdf_finger_proximal.stl  urdf_finger_proximal_marked.stl  urdf_forearm_marker.stl  urdf_head_base.stl  urdf_head_s2.stl  urdf_palm_left.stl  urdf_palm_right.stl  urdf_shoulder_horizontal_s1.stl  urdf_shoulder_vertical.stl  urdf_shoulder_vertical_marker.stl  urdf_thumb_rotator_left.stl  urdf_thumb_rotator_right.stl
ros_packages/pibsim_webots/protos/resources/: urdf_body.stl  urdf_camera_link.stl  urdf_elbow-lower.stl  urdf_elbow-upper.stl  urdf_finger_distal.stl  urdf_finger_proximal.stl  urdf_forearm.stl  urdf_head.stl  urdf_head_base.stl  urdf_palm_left.stl  urdf_palm_right.stl  urdf_shoulder_horizontal.stl  urdf_shoulder_vertical.stl  urdf_thumb_rotator_left.stl  urdf_thumb_rotator_right.stl
ros_packages/pibsim_webots/resource/: pib.urdf
ros_packages/pibsim_webots/test/: mcp_server_test.py
ros_packages/pibsim_webots/worlds/: .PibSim.wbproj  PibSim.wbt
(+506 files in other folders)
