<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doa</name>
  <version>0.0.0</version>
  <description>Publish and listen to DOA data from usb mic array via ROS2 stream, if mic array is connected</description>
  <maintainer email="team@pib.rocks">pib</maintainer>
  <license>Agpl3.0</license>
  
  <exec_depend>pyusb</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyaudio</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>rclpy</exec_depend>  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
