<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motors</name>
  <version>0.0.0</version>
  <description>Recieving msgs from cerebra via rosbridge and writing to pib motors using Tinkerforge APIs</description>
  <maintainer email="team@pib.rocks">pib</maintainer>
  <license>Agpl3.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tinkerforge</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
