<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pibsim_webots</name>
  <version>0.2.1</version>
  <description>Simulation package for the open source human robot pib and webots.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>webots_ros2</depend>
  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <webots_ros webots_extra_project_path="${prefix}"/>
    <build_type>ament_python</build_type>
  </export>
</package>
